CrOS - Make it possible to Alt+Tab while dragging a tab without interfering with the drag and drop operation.

The Alt+Tab UI no longer does a mouse capture, and instead relies on event filters.

BUG=660945

Review-Url: https://codereview.chromium.org/2642273002
Cr-Commit-Position: refs/heads/master@{#445851}

Former-commit-id: 2080dad23aec7f5225154092b527acc4737f261c